# rust_test

./: Gemfile
app/models/: Rust.rb
app/views/layouts/: application.html.erb
config/: application.rb  secrets.yml
config/initializers/: session_store.rb
lib/embed/: Cargo.toml
lib/embed/src/: lib.rs
lib/kuchiki_test/: Cargo.toml  embed.rb  points.rs
lib/kuchiki_test/src/: lib.rs
lib/scrape/: Cargo.toml
lib/scrape/src/: lib.rs
