[package]
name = "embed"
version = "0.1.0"
authors = ["Mike Piccolo <mfpiccolo@gmail.com>"]

[lib]
name = "embed"
crate-type = ["dylib"]

[dependencies]
html5ever = "*"
fnv = "1.0"
regex = "0.1.8"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"

[dependencies.kuchiki]
git = "https://github.com/SimonSapin/kuchiki"

[dependencies.url]
git = "https://github.com/servo/rust-url"

[dependencies.string_cache]

[dependencies.tendril]

[dependencies.html5ever_dom_sink]

[dependencies.selectors]
git = "https://github.com/servo/rust-selectors"
